# ki

./: .env-example  .gitignore  LICENSE.md  Pipfile  README.md  compose.yml  config.py  ki.py  package-lock.json  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  settings.py
app/main/: api.py  auth.py  info.py  models.py  routes.py
app/static/: style.css
app/static/addons/: marked.umd.min.js  unpkg.com_vue@3.3.4_dist_vue.global.prod.js:Zone.Identifier
app/static/js/: scripts.js
app/templates/: adminbot.html  base.html  bot.html  bot2.html  elever.html  header.html  index.html  info.html  info_menu.html  lerere.html  om.html  personvern.html  settings.html
backend/: .env-example  Dockerfile  pyproject.toml  refactoring_checklist.md  requirements.txt
backend/app/: asgi.py  settings.py  workers.py
backend/ki/: models.py  urls.py  utils.py
backend/ki/ai_providers/: azure.py
backend/ki/jinja2/ki/: adminbot.html  info.html
backend/ki/migrations/: 0001_initial.py  0002_remove_bot_bot_nr_remove_botaccess_bot_nr_and_more.py  0003_bot_img_bot.py  0004_auto_20240918_0711.py  0005_uselog_logschool.py  0006_alter_bot_uuid.py  0006_tagcategory_remove_bot_tag_cat_1_and_more.py  0007_bot_image_attr.py  0008_botmodel_bot_model_id.py  0008_uselog_level_alter_uselog_message_length.py  0009_merge_20250108_1349.py  0010_remove_bot_model_bot_is_audio_enabled.py  0011_uselog_interaction_type.py  0012_subjectaccess_valid_from_subjectaccess_valid_to.py  0013_taglabel_tag_label_weight_and_more.py  0014_auto_20250416_1436.py  0015_auto_20250428_0854.py  0016_role_user_name_alter_bot_allow_distribution_and_more.py  0017_alter_school_options_and_more.py  0017_localuser_alter_bot_allow_distribution_and_more.py  0018_alter_school_options_and_more.py  0018_rename_user_name_role_name_remove_role_user_id_and_more.py  0019_alter_school_options_and_more.py  0019_auto_20250901_1357.py  0020_alter_school_options_and_more.py  0020_remove_pagetext_public_pagetext_accessable_by.py  0021_alter_bot_title_alter_choiceoption_label_and_more.py  0021_auto_20251114_0920.py  0022_pagetext_has_separate_menu.py  0023_bot_reasoning_effort_bot_verbosity_and_more.py
backend/ki/tests/: test_api.py  test_bot_access.py  test_hello.py  test_settings.py
backend/ki/views/: api.py  audio_api.py  auth.py  routes.py  utils.py
backend/ki/views/ai_providers/: azure.py
django/: models.py
django/app/: jinja2.py  settings.py  urls.py
django/ki/: mock.py  models.py  urls.py
django/ki/views/: api.py  auth.py  routes.py
django/static/js/: scripts.js
frontend/: .env-example  .prettierrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/nginx/: nginx.conf
frontend/src/: App.vue  clients.js  main.js  store.js  utils.js
frontend/tests/: testUtils.js
ki/: models.py  urls.py
ki/views/: api.py  auth.py  routes.py
log/: compose.yml
log/prometheus/: prometheus.yml
static/: style.css
(+72 files in other folders)
