[tool.poetry]
name = "ki"
version = "0.1.0"
description = ""
authors = []
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
oauthlib = "^3.2.2"
requests = "^2.31.0"
pyopenssl = "^24.0.0"
openai = "^1.60.2"
pymysql = "^1.1.0"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"
django = "^4.2.6"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.4"
azure-cognitiveservices-speech = "^1.41.1"
channels = "^4.2.0"
django-cors-headers = "^4.6.0"
websockets = "^14.2"

[tool.poetry.group.dev.dependencies]
daphne = "^4.1.0"
pytest = "^8.3.4"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py"]
testpaths = ["ki/tests"]
django_find_project = true
pythonpath = ["."]
