[tool.poetry]
name = "ki"
version = "0.1.0"
description = ""
authors = []
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.14"
python-dotenv = "^1.2.1"
oauthlib = "^3.3.1"
requests = "^2.32.5"
pyopenssl = "^25.3.0"
openai = "^2.8.1"
pymysql = "^1.1.2"
gunicorn = "^23.0.0"
uvicorn = "^0.34.2"
django = "^5.2.9"
djangorestframework = "^3.16.1"
azure-cognitiveservices-speech = "^1.41.1"
channels = "^4.2.0"
django-cors-headers = "^4.6.0"
websockets = "^14.2"
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
daphne = "^4.2.1"
pytest = "^9.0.1"
pytest-django = "^4.11.1"
poethepoet = "^0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py"]
testpaths = ["ki/tests"]
django_find_project = true
pythonpath = ["."]

[tool.poe.tasks]
run-tests = "pytest -vv --nomigrations -s"
run-server = "python manage.py runserver 5000"
